
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char* u_short ;
typedef int u_int ;
typedef char u_char ;


 int printf (char*,...) ;
 scalar_t__ strlen (char*) ;

int info_proto(u_char *data, int len) {
    int ver,
            num;
    u_char *limit;

    limit = data + len;
    ver = *(u_int *)data; data += 4;
    printf("  Version    %d\n", ver);
    printf("  Hostname   %s\n", data); data += strlen(data) + 1;
    printf("  Players    %hhu/%hhu\n", data[0], data[1]); data += 2;
    printf("  Mapname    %s\n", data); data += strlen(data) + 1;
    if(*data++) {
        printf("  Wad        %s\n", data); data += strlen(data) + 1;
    }
    printf("  Deathmatch %hhu\n", *data++);
    printf("  Gameskill  %hhu\n", *data++);
    printf("  Teamplay   %hhu\n", *data++);
    printf("  Fragstats  %s\n", data); data += strlen(data) + 1;
    printf("  DMFlags    %u\n", *(u_int *)data); data += 4;
    num = *data++;
    if(num) {
        printf("  Players:\n");
        while(num--) {
            printf("    %s ", data); data += strlen(data) + 1;
            printf("  %hu ", *(u_short *)data); data += 2;
            printf("  %hu\n", *(u_short *)data); data += 2;
        }
    }

    return(ver);
}
